/******************************************************************************
 * @Author                : h6wk<h6wking@gmail.com>                           *
 * @CreatedDate           : 2024-02-18 21:39:21                               *
 * @LastEditDate          : 2024-02-18 21:41:00                               *
 * @CopyRight             : GNU GPL                                           *
 *****************************************************************************/

#ifndef C3E4D4A0_8ED5_4E28_BFD5_D109621D2A28
#define C3E4D4A0_8ED5_4E28_BFD5_D109621D2A28

namespace cmder::exe {
  class CommandResult {
  public:
  };
}

#endif /* C3E4D4A0_8ED5_4E28_BFD5_D109621D2A28 */
