@startuml





/' Objects '/

class scoped_logger {
	+scoped_logger(const std::string& className, const char* funcName, unsigned line)
	+~scoped_logger()
	-_ss : std::stringstream
	+stream() : std::stringstream&
}


namespace tests {
	class UserTest {
		#SetUp() : void
		#{static} SetUpTestSuite() : void
		#TearDown() : void
		#{static} TearDownTestSuite() : void
	}
}


namespace executor {
	namespace user {
		class User {
			+User(const std::string& name)
			+~User()
			+getUserID() : UserID {query}
			-mName : const std::string
			+getName() : std::string {query}
			-mUserID : string
		}
	}
}


namespace cmder {
	abstract class IControllableThread {
		+{abstract} getStatus() : int {query}
		+{abstract} start() : void
		+{abstract} stop() : void
	}

	abstract class IStatProvider {
		+{abstract} statNotification(const std::string& notificationName) : uint64_t {query}
	}

	enum Status {
		Init
		Run
		Start
		Stop
	}

	namespace tst {
		class AgentTest {
			#{static} sServer : Server
			#{static} sAsyncAgent : static Agent::SharedPtr
			#{static} sNoCallbackAgent : static Agent::SharedPtr
			#{static} sCallback : static Callback::SharedPtr
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#{static} TearDownTestSuite() : void
		}

		class CallbackTest {
			#{static} sCallback : static Callback::SharedPtr
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#{static} TearDownTestSuite() : void
		}

		class ServerTest {
			#mServer : std::unique_ptr<Server>
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#TearDown() : void
			#{static} TearDownTestSuite() : void
		}

		class TaskTest {
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#TearDown() : void
			#{static} TearDownTestSuite() : void
		}

		class ThreadPoolTest {
			#mThreadPool : std::unique_ptr<ThreadPool>
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#TearDown() : void
			#{static} TearDownTestSuite() : void
		}

		namespace poc {
			class CoroutineTest {
				#SetUp() : void
				#{static} SetUpTestSuite() : void
				#{static} TearDownTestSuite() : void
			}
		}

		namespace exe {
			class OsExecutorTest {
				#SetUp() : void
				#{static} SetUpTestSuite() : void
				#TearDown() : void
				#{static} TearDownTestSuite() : void
			}
		}
	}

	namespace tools {
		class ThreadPool {
			+ThreadPool(size_t threadCount)
			-function<void()
			+~ThreadPool()
			-mStopThreadPool : bool
			+result_of_t<F(Args ... )>>execute ( F&& f, Args&& ... args) : requires std::invocable<F , Args ...>
			-mConditionVariable : std::condition_variable
			-mMutex : std::mutex
			-mThreads : std::vector<std::thread>
		}
	}

	namespace srv {
		class Server {
			+Server()
			+~Server()
			+getStatus() : Status {query}
			-mStatus : Status
			-mAgents : map<AgentName_t, AgentInfo>
			-mMutex : mutable std::mutex
			-mConditionVariable : std::condition_variable
			-mNotificationStatistics : std::map<std::string, uint64_t>
			-mThreadPtr : std::unique_ptr<std::thread>
			+statNotification(const std::string& notificationName) : uint64_t {query}
			+registerAgent(const std::string& agentName, const Callback::SharedPtr& callback) : void
			-run() : void
			+start() : void
			+stop() : void
			+unregisterAgent(const std::string& agentName) : void
			-unregisterAgentUnsafe(const std::string& agentName) : void
		}
	}

	namespace exe {
		class CmdOutcome {
			+CmdOutcome()
			+~CmdOutcome()
			-mExitCode : int32_t
			+operator<<(std::ostream& os, const CmdOutcome& oc) : std :: ostream&
			-mStandardError : std::string
			-mStandardOut : std::string
		}

		class Command {
			+{static} execute(const std::string& command) : CommandResult
		}

		class CommandResult {
		}

		class OsExecutor {
			+OsExecutor()
			+~OsExecutor()
			+{static} run(const std::string& command, IpcMode mode) : CmdOutcome
		}

		class ProcessStatus {
			+ProcessStatus(int status)
			+~ProcessStatus()
			+getStatusResult() : ProcessResult {query}
			-mStatus : const int
			+operator<<(std::ostream& os, const ProcessStatus& ps) : std :: ostream&
			-mResult : tuple<ExitMode, int>
		}

		enum ExitMode {
			Exited
			Signaled
		}

		enum IpcMode {
			File
			Pipe
			PipeAsync
			SharedMemory
		}
	}

	namespace common {
		class Callback {
			+Callback(const std::string& owner)
			+~Callback()
			+empty() : bool {query}
			-mMutex : mutable std::mutex
			+size() : size_t {query}
			+operator<<(std::ostream& ostr, const Callback::SharedPtr& cb) : std :: ostream&
			-mConditionVariable : std::condition_variable
			+pop() : std::optional<Message_t>
			+tryPop() : std::optional<Message_t>
			-mMessages : std::queue<Message_t>
			-mOwnerName : std::string
			+clear() : void
			+notify(TaskId_t taskId, CallbackMessageType_t type, const std::string& message) : void
		}

		enum CallbackMessageType_t {
			NOTIFICATION
			RESULT
		}

		enum ExecutionMode_t {
			Async
			Blocking
		}

		class AgentInfo {
			+AgentInfo(string n, const Callback::SharedPtr& sp)
			+mCallback : Callback::WeakPtr
			+mHasCallback : bool
			+mAgentName : string
		}

		class Callback::Message_t {
			+mType : CallbackMessageType_t
			+mTime : ChronoTime_t
			+mTaskId : TaskId_t
			+mText : std::string
		}
	}

	namespace agent {
		class Agent {
			-Agent(Server& server, Callback::SharedPtr callback)
			+~Agent()
			-mCallbackAgent : Callback::SharedPtr
			-mCallbackUser : Callback::WeakPtr
			+doTask(ExecutionMode_t mode, const TaskName& task, std::string& result) : Receipt {query}
			-mServer : Server&
			+{static} create(Server& server, Callback::SharedPtr callback) : SharedPtr
			+getStatus() : Status {query}
			-mStatus : Status
			-mMutex : mutable std::mutex
			-mConditionVariable : std::condition_variable
			-mDebugName : std::string
			+getName() : std::string& {query}
			-mThreadPtr : std::unique_ptr<std::thread>
			+statNotification(const std::string& notificationName) : uint64_t {query}
			+registerAgent() : void
			-run() : void
			+start() : void
			+stop() : void
			+unregisterAgent() : void
		}

		class Receipt {
			+Receipt(ExecutionMode_t mode)
			-mEndTime : ChronoTime_t
			-mStartTime : ChronoTime_t
			+getEndTime() : ChronoTime_t& {query}
			+getStartTime() : ChronoTime_t& {query}
			+getExecutionMode() : ExecutionMode_t {query}
			-mStatus : Status_t
			+getTaskId() : TaskId_t {query}
			-mMode : const ExecutionMode_t
			-mTaskId : const TaskId_t
			+getStatus() : int {query}
			+setEndTime() : void
			+setStatus(Status_t status) : void
		}

		class Task {
			-mTaskConfiguration : std::vector<TaskConfig>
		}

		enum Receipt::Status_t {
			FAIL
			OK
		}

		enum TaskName {
			BlockMe_3s
			Pi
			PingMe_5x
		}

		class Task::TaskConfig {
		}
	}
}





/' Inheritance relationships '/

cmder.IControllableThread <|-- cmder.agent.Agent


cmder.IControllableThread <|-- cmder.srv.Server


cmder.IStatProvider <|-- cmder.agent.Agent


cmder.IStatProvider <|-- cmder.srv.Server





/' Aggregation relationships '/

cmder.agent.Agent *-- cmder.Status


cmder.common.Callback::Message_t *-- cmder.common.CallbackMessageType_t


cmder.exe.ProcessStatus *-- cmder.exe.ExitMode


cmder.srv.Server *-- cmder.Status






/' Nested objects '/

cmder.common.Callback +-- cmder.common.Callback.Message_t


cmder.agent.Receipt +-- cmder.agent.Receipt.Status_t


cmder.agent.Task +-- cmder.agent.Task.TaskConfig




@enduml
